src/main/default/objects/Order/fields/Clone__c.field-meta.xml
<CustomField>
    <fullName>Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clone?</label>
    <type>Checkbox</type>
</CustomField>