src/main/default/objects/Order/fields/DefaultPriceBook__c.field-meta.xml
<CustomField>
    <fullName>DefaultPriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>