src/main/default/objects/Order/fields/DeliveredOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveredOrderNumber__c</fullName>
    <description>Field to identify the Original Order Number (Delivered Order) - Used for reporting.</description>
    <formula>IF( 
				AND(OriginalOrder__c != null, Clone__c, OR(ISPICKVAL(OriginalOrder__r.Status, &apos;Delivered&apos;), ISPICKVAL(OriginalOrder__r.Status, &apos;Receipted&apos;))),
				OriginalOrder__r.OrderNumber,
				IF(
								AND(OriginalOrder__c == null, OR(ISPICKVAL(Status, &apos;Delivered&apos;), ISPICKVAL(Status, &apos;Receipted&apos;))),
								OrderNumber,
								&apos;&apos;
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered Order Number</label>
    <type>Text</type>
</CustomField>