src/main/default/objects/Order/fields/DeliveryFailed__c.field-meta.xml
<CustomField>
    <fullName>DeliveryFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Populated when order is cancelled from Delivery Failed status. Only during operation done from Logistic Update Screen.</inlineHelpText>
    <label>Delivery Failed</label>
    <type>Checkbox</type>
</CustomField>