src/main/default/objects/Order/fields/DeliveryManifestPrinted__c.field-meta.xml
<CustomField>
    <fullName>DeliveryManifestPrinted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically filled when picking sheets are printed via Action. Not accessible to users for edit.</inlineHelpText>
    <label>Delivery Manifest Printed?</label>
    <type>Checkbox</type>
</CustomField>