src/main/default/objects/Order/fields/DeliveryNotePrinted__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNotePrinted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically filled when picking sheets are printed via Action. Not accessible to users for edit.</inlineHelpText>
    <label>Delivery Note Printed?</label>
    <type>Checkbox</type>
</CustomField>