src/main/default/objects/Order/fields/DeliveryPointReference__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPointReference__c</fullName>
    <formula>Account.DeliveryPointReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Point Reference</label>
    <type>Text</type>
</CustomField>