src/main/default/objects/Order/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <label>Depot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DepotValues</valueSetName>
    </valueSet>
</CustomField>