src/main/default/objects/Order/fields/DPName__c.field-meta.xml
<CustomField>
    <fullName>DPName__c</fullName>
    <label>DP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>