src/main/default/objects/Order/fields/DPReference__c.field-meta.xml
<CustomField>
    <fullName>DPReference__c</fullName>
    <label>DP Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>