src/main/default/objects/Order/fields/DpRefInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>DpRefInvoiceNo__c</fullName>
    <description>Reference Number for Stripe via Virtual Terminal integration</description>
    <formula>DeliveryPointReference__c + &apos; / &apos; +  OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DpRef/Invoice No</label>
    <type>Text</type>
</CustomField>