src/main/default/objects/Order/fields/FullReturnOrder__c.field-meta.xml
<CustomField>
    <fullName>FullReturnOrder__c</fullName>
    <description>Field to identify full return orders by comparing the amount on the original order vs. the amount on the new order.</description>
    <formula>IF( AND(OriginalOrder__c != null, OriginalOrder__r.TotalAmount == TotalAmount), True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Return Order</label>
    <type>Checkbox</type>
</CustomField>