src/main/default/objects/Order/fields/Grid__c.field-meta.xml
<CustomField>
    <fullName>Grid__c</fullName>
    <label>Grid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>