src/main/default/objects/Order/fields/GridDelivery__c.field-meta.xml
<CustomField>
    <fullName>GridDelivery__c</fullName>
    <formula>LEFT( Grid__c , 1) &amp;  MID( Grid__c , 3, 2)</formula>
    <label>Grid (Delivery)</label>
    <type>Text</type>
</CustomField>