src/main/default/objects/Order/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as part of approval process update to override blocking automations from DP Credit Status being &apos;On Hold&apos; and Available Credit being negative.</description>
    <label>Is Approved?</label>
    <type>Checkbox</type>
</CustomField>