src/main/default/objects/Order/fields/IsLoaded__c.field-meta.xml
<CustomField>
    <fullName>IsLoaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically filled when picking sheets are printed via Action. Not accessible to users for edit.</inlineHelpText>
    <label>Is Loaded?</label>
    <type>Checkbox</type>
</CustomField>