src/main/default/objects/Order/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>