src/main/default/objects/Order/fields/MinOrderQuantityCalculation__c.field-meta.xml
<CustomField>
    <fullName>MinOrderQuantityCalculation__c</fullName>
    <description>Hidden formula field to calculate if the value in parent account minimum order quantity field is greater than the total number of order items in an order. To be used on Order Page for component visibility.</description>
    <formula>IF(Account.MinOrderQuantity__c &gt; TotalQTY__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Order Quantity Calculation</label>
    <type>Checkbox</type>
</CustomField>