src/main/default/objects/Order/fields/MissingProduct10__c.field-meta.xml
<CustomField>
    <fullName>MissingProduct10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used in aforza mobile app Smart Action to adjust order item with missing quantity</description>
    <label>Missing Product 10</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Missing Product 10)</relationshipLabel>
    <relationshipName>Orders9</relationshipName>
    <type>Lookup</type>
</CustomField>