src/main/default/objects/Order/fields/MissingProduct1__c.field-meta.xml
<CustomField>
    <fullName>MissingProduct1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used in aforza mobile app Smart Action to adjust order item with missing quantity</description>
    <label>Missing Product 1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>