src/main/default/objects/Order/fields/MissingProduct2__c.field-meta.xml
<CustomField>
    <fullName>MissingProduct2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used in aforza mobile app Smart Action to adjust order item with missing quantity</description>
    <label>Missing Product 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Missing Product 2)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>