src/main/default/objects/Order/fields/MissingQuantity1__c.field-meta.xml
<CustomField>
    <fullName>MissingQuantity1__c</fullName>
    <description>Field used in aforza mobile app Smart Action to adjust order item with missing quantity</description>
    <label>Missing Quantity 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>