src/main/default/objects/Order/fields/NetTotal__c.field-meta.xml
<CustomField>
    <fullName>NetTotal__c</fullName>
    <formula>TotalAmount - DiscountTotal__c -  TaxTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>