src/main/default/objects/Order/fields/OrderInstructions__c.field-meta.xml
<CustomField>
    <fullName>OrderInstructions__c</fullName>
    <label>Order Instructions</label>
    <type>TextArea</type>
</CustomField>