src/main/default/objects/Order/fields/OrderItemQuantityAdjusted__c.field-meta.xml
<CustomField>
    <fullName>OrderItemQuantityAdjusted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Item Quantity Adjusted</label>
    <type>Checkbox</type>
</CustomField>