src/main/default/objects/Order/fields/OrderRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>OrderRecordTypeName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Record Type Name</label>
    <type>Text</type>
</CustomField>