src/main/default/objects/Order/fields/OrderWasActivated__c.field-meta.xml
<CustomField>
    <fullName>OrderWasActivated__c</fullName>
    <description>Checks if order was activated. To be used on Order Page for component visibility.</description>
    <formula>CONTAINS($CustomMetadata.OrderSetting__mdt.OrgDefaultOrderSettings.CompletedOrderStatuses__c, TEXT(Status))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Was Activated</label>
    <type>Checkbox</type>
</CustomField>