src/main/default/objects/Order/fields/OutOfSync__c.field-meta.xml
<CustomField>
    <fullName>OutOfSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to be checked when the order will be delivered outside of the regular delivery schedule (based on grid).</description>
    <label>Out of Sync</label>
    <type>Checkbox</type>
</CustomField>