src/main/default/objects/Order/fields/PalletDescription__c.field-meta.xml
<CustomField>
    <fullName>PalletDescription__c</fullName>
    <label>Pallet Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>