src/main/default/objects/Order/fields/PalletSequence__c.field-meta.xml
<CustomField>
    <fullName>PalletSequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pallet Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>