src/main/default/objects/Order/fields/PickingCompleted__c.field-meta.xml
<CustomField>
    <fullName>PickingCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically filled when picking sheets are printed via Action. Not accessible to users for edit.</inlineHelpText>
    <label>Picking Completed?</label>
    <type>Checkbox</type>
</CustomField>