src/main/default/objects/Order/fields/PreAuthCaptured__c.field-meta.xml
<CustomField>
    <fullName>PreAuthCaptured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Auth Captured?</label>
    <type>Checkbox</type>
</CustomField>