src/main/default/objects/Order/fields/PrimaryPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPaymentMethod__c</fullName>
    <formula>TEXT(Account.PrimaryPaymentMethod__c)</formula>
    <label>Primary Payment Method</label>
    <type>Text</type>
</CustomField>