src/main/default/objects/Order/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically filled when picking sheets are printed via Action. Not accessible to users for edit.</inlineHelpText>
    <label>Receipt?</label>
    <type>Checkbox</type>
</CustomField>