src/main/default/objects/Order/fields/Replanned__c.field-meta.xml
<CustomField>
    <fullName>Replanned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field populated to true when order changed status from Delivery Failed to Unplanned. Populated only by action from Logistic Update Screen.</inlineHelpText>
    <label>Replanned</label>
    <type>Checkbox</type>
</CustomField>