src/main/default/objects/Order/fields/ReturnReason__c.field-meta.xml
<CustomField>
    <fullName>ReturnReason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>OrderReturnReason</valueSetName>
    </valueSet>
</CustomField>