src/main/default/objects/Order/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <formula>MID( Grid__c , 3, 2)</formula>
    <label>Route</label>
    <type>Text</type>
</CustomField>