src/main/default/objects/Order/fields/SalesRepresentativeCode__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentativeCode__c</fullName>
    <label>Sales Representative Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>