src/main/default/objects/Order/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <inlineHelpText>Populated with Account name when Accounts Separate Load is checked.</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>