src/main/default/objects/Order/fields/SwiftCloudId__c.field-meta.xml
<CustomField>
    <fullName>SwiftCloudId__c</fullName>
    <externalId>true</externalId>
    <label>Swiftcloud ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>