src/main/default/objects/Order/fields/TaxTotal__c.field-meta.xml
<CustomField>
    <fullName>TaxTotal__c</fullName>
    <label>Tax Total</label>
    <summarizedField>OrderItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.aforza__Type__c</field>
        <operation>equals</operation>
        <value>Tax</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>