src/main/default/objects/Order/fields/TotalNumberOfCasesOnOrder__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberOfCasesOnOrder__c</fullName>
    <label>Total Number of Cases on Order</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.ProductFamily__c</field>
        <operation>notEqual</operation>
        <value>Deposit</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>