src/main/default/objects/Order/fields/TotalNumberOfFullyDiscountedItems__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberOfFullyDiscountedItems__c</fullName>
    <label>Total Number Of Fully Discounted Items</label>
    <summaryFilterItems>
        <field>OrderItem.aforza__Discount_Percent__c</field>
        <operation>equals</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>