src/main/default/objects/Order/fields/TotalOrderWeight__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderWeight__c</fullName>
    <label>Total Order Weight</label>
    <summarizedField>OrderItem.TotalProductWeight__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>