src/main/default/objects/Order/fields/TotalQuantityOfDRSProducts__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantityOfDRSProducts__c</fullName>
    <label>Total Quantity Of DRS Products</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.IsDRSProduct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>