src/main/default/objects/Order/recordTypes/ECommerceOrder.recordType-meta.xml
<RecordType>
    <fullName>ECommerceOrder</fullName>
    <active>true</active>
    <label>E-Commerce Order</label>
</RecordType>