src/main/default/objects/Order/recordTypes/EDIOrder.recordType-meta.xml
<RecordType>
    <fullName>EDIOrder</fullName>
    <active>true</active>
    <label>EDI Order</label>
</RecordType>