src/main/default/objects/Order/recordTypes/FieldDirectOrder.recordType-meta.xml
<RecordType>
    <fullName>FieldDirectOrder</fullName>
    <active>true</active>
    <label>Field Direct Order</label>
</RecordType>