src/main/default/objects/Order/recordTypes/ReturnOrder.recordType-meta.xml
<RecordType>
    <fullName>ReturnOrder</fullName>
    <active>true</active>
    <label>Return Order</label>
</RecordType>