src/main/default/objects/Order/recordTypes/StraightToJDEOrder.recordType-meta.xml
<RecordType>
    <fullName>StraightToJDEOrder</fullName>
    <active>true</active>
    <label>Straight to JDE Order</label>
</RecordType>