src/main/default/objects/Order/recordTypes/TelesalesOrder.recordType-meta.xml
<RecordType>
    <fullName>TelesalesOrder</fullName>
    <active>true</active>
    <label>Telesales Order</label>
</RecordType>