src/main/default/objects/Order/recordTypes/VanSalesOrder.recordType-meta.xml
<RecordType>
    <fullName>VanSalesOrder</fullName>
    <active>true</active>
    <label>Van Sales Order</label>
</RecordType>