src/main/default/objects/Order/validationRules/OriginalOrderIdRequiredOnReturnOrders.validationRule-meta.xml
<ValidationRule>
    <fullName>OriginalOrderIdRequiredOnReturnOrders</fullName>
    <active>true</active>
    <description>Validation which ensures that Original Order is filled on return type orders.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Type, &apos;Return Order&apos;),
    ISBLANK(aforza__Original_Order__c)
)</errorConditionFormula>
    <errorDisplayField>aforza__Original_Order__c</errorDisplayField>
    <errorMessage>Please select the original order for which you are creating the return order.</errorMessage>
</ValidationRule>