src/main/default/objects/Order/validationRules/PORequiredValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PORequiredValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  ISPICKVAL( Status , &quot;Activated&quot;),  
  ISBLANK( PoNumber ),  
  Account.PORequired__c, 
  OR( RecordType.DeveloperName = &quot;TelesalesOrder&quot;, 
      RecordType.DeveloperName = &quot;FieldDirectOrder&quot;
   ) 
)</errorConditionFormula>
    <errorMessage>Please fill out the Purchase Order Number on this order.</errorMessage>
</ValidationRule>