src/main/default/objects/Order/validationRules/PreventOrderPastDateAndDeliveryDate.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventOrderPastDateAndDeliveryDate</fullName>
    <active>true</active>
    <description>Validation to prevent Order Start Date or Delivery Date to have past dates as values.</description>
    <errorConditionFormula>OR(
					EffectiveDate &lt; TODAY(), 
					DeliveryDate__c &lt; TODAY()
	)</errorConditionFormula>
    <errorMessage>Order Start Date or Delivery Date field values can&apos;t be in the past.</errorMessage>
</ValidationRule>