src/main/default/objects/Order/validationRules/PreventOriginalOrderWithDifferentAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventOriginalOrderWithDifferentAccount</fullName>
    <active>true</active>
    <description>Prevent a return order to have an original order with a different account Id, a status different than &apos;Receipted&apos; and a type different than &apos;Product Order&apos;.</description>
    <errorConditionFormula>AND(
				RecordType.DeveloperName == &apos;ReturnOrder&apos;, 
				aforza__Original_Order__c != null,
				Clone__c = false,
				OR(
								AccountId != aforza__Original_Order__r.AccountId,
        NOT(ISPICKVAL(aforza__Original_Order__r.Status, &apos;Receipted&apos;)), 								
			    	NOT(ISPICKVAL(aforza__Original_Order__r.Type, &apos;Product Order&apos;))
				    )
    )</errorConditionFormula>
    <errorMessage>The Original Order is either associated with a different Account, has a Status different than &apos;Receipted&apos; or a Type different than &apos;Product Order&apos;.</errorMessage>
</ValidationRule>