src/main/default/objects/Order/validationRules/PreventUpdateOfPaymentMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUpdateOfPaymentMethod</fullName>
    <active>true</active>
    <description>Payment Method on orders can be changed as long as the order is in &quot;Draft&quot; status, but not afterwards.</description>
    <errorConditionFormula>NOT(ISPICKVAL(Status, &quot;Draft&quot;)) &amp;&amp; ISCHANGED(PaymentMethod__c)</errorConditionFormula>
    <errorDisplayField>PaymentMethod__c</errorDisplayField>
    <errorMessage>Payment method can only be changed if the order is in status &quot;Draft&quot;.</errorMessage>
</ValidationRule>