src/main/default/objects/Order/validationRules/PreventUsersFromUpdatedStatusAfterUnplan.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUsersFromUpdatedStatusAfterUnplan</fullName>
    <active>true</active>
    <description>Only depot team, Application support and in Sales Support can move orders to other status past unplanned.</description>
    <errorConditionFormula>AND( ISCHANGED( Status) , ISPICKVAL( PRIORVALUE(Status) ,&apos;Unplanned&apos;), ($Permission.UpdateOrderStatusPastUnplanned == FALSE))</errorConditionFormula>
    <errorMessage>Do not have permission to move Status past Unplanned</errorMessage>
</ValidationRule>